K8S/warehouse-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warehouse-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: warehouseservice
  template:
    metadata:
      labels:
        app: warehouseservice
    spec:
      containers:
        - name: warehouseservice
          image: stilianstefanov/warehouseservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: warehouse-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: warehouseservice
  ports:
  - name: warehouseservice
    protocol: TCP
    port: 8080
    targetPort: 8080
