K8S/warehouse-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehousenpservice-srv
spec:
  type: NodePort
  selector:
    app: warehouseservice
  ports:
    - name: warehouseservice
      protocol: TCP
      port: 8080
      targetPort: 8080
