K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: acme.com
      http:
        paths:
          - path: /api/warehouses
            pathType: Prefix
            backend:
              service:
                name: warehouse-clusterip-srv
                port:
                  number: 8080
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: product-clusterip-srv
                port:
                  number: 8080
          - path: /api/clients
            pathType: Prefix
            backend:
              service:
                name: delayedpayment-clusterip-srv
                port:
                  number: 8080
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: identity-clusterip-srv
                port:
                  number: 8080
